d621/myapp-svc-named-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-namedport
spec:
  ports:
  - name: myapp-http
    port: 80
    targetPort: 8080
  selector:
    app: myapp-rs-namedport
