d621/myapp-ing-multi-hosts.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ing-mhost
spec:
  rules:
  - host: web1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-svc-ext-np1
          servicePort: 80
  - host: web2.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-svc-ext-np2
          servicePort: 80
